--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 			  <div class="row mt-5 banner">
 			    <div class="col-md-6 col-12 mt-4  order-2 order-md-1  banner-content">
-			      <div class="row">
+			      <div class="row" data-aos="zoom-in">
 			        <div class="col-12 col-md-12  mb-4">
 			          <h2 class="font-weight-bold">We provide a comprehensive debt collection service</h2>
 			        </div>
@@ -126,13 +126,13 @@
 						<div class="col-md-12">
 							<div class="row text-center">
 								<div class="col mt-5">
-									<img src="asset/images/cart1.png">
+									<img src="asset/images/cart3.png">
 									<p class="mt-5">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit eum debitis quo? Cumque ab earum tempora quidem iure repudiandae dolorum eius at velit.
 									</p>
 								</div>
 								<div class="col mt-5 border-left border-right">
-									<img src="asset/images/cart1.png">
+									<img src="asset/images/cart2.png">
 									<p class="mt-5">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sint tempora illum fugiat aut harum fugit eum, ratione amet at, dolor dolorum debitis.
 									</p>
