--- a/index.html
+++ b/index.html
@@ -122,8 +122,12 @@
 					</div>
 				</div>
 				<div class="col-md-12 col-12 parent__custom-container">
+      		<div class="net-design-2 position-absolute">
+						<img src="asset/images/net.png">
+					</div>
 					<div class="row custom-container" data-aos="zoom-in">
 						<div class="col-md-12">
+
 							<div class="row text-center">
 								<div class="col mt-5">
 									<img src="asset/images/cart3.png">
