some changes on the footer

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
 	<header class="header pb-3">
 		<div class="container">
-			  <nav class="navbar navbar-dark  navbar-expand-md px-0 mt-3 mb-5">
+			  <nav class="navbar navbar-light  navbar-expand-md px-0 mt-3 mb-5">
 			    <!-- Brand -->
-			    <a class="navbar-brand text-white d-none d-md-block" href="#">
+			    <a class="navbar-brand text-white" href="#">
 			    	<img src="asset/images/logo.png">
 			    </a>
 			    
@@ -72,13 +72,13 @@
 			        <div class="col-12 col-md-9 mt-4">
 			          <div class="row">
 			          	<!-- desktop view  for form-->
-			          	<div class="col-md-6 position-relative">
+			          	<div class="col-md-6 col-6 position-relative">
 			          		<a href="#" class="btn custom-btn__1  inline-block w-100">Hire us</a>
 			          		<div class="net-design position-absolute">
 											<img src="asset/images/net.png">
 										</div>
 			          	</div>
-			            <div class="col-md-6   d-flex align-items-center ">
+			            <div class="col-md-6 col-6   d-flex align-items-center ">
 										<p class="m-0">
 											<i class="fas fa-play"></i>
 											<a class="custom-link " href="#">Watch the Video</a>
@@ -129,19 +129,19 @@
 						<div class="col-md-12">
 
 							<div class="row text-center">
-								<div class="col mt-5">
+								<div class="col-12 mt-5">
 									<img src="asset/images/cart3.png">
 									<p class="mt-5">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit eum debitis quo? Cumque ab earum tempora quidem iure repudiandae dolorum eius at velit.
 									</p>
 								</div>
-								<div class="col mt-5 border-left border-right">
+								<div class="col-12 mt-5 border-left border-right">
 									<img src="asset/images/cart2.png">
 									<p class="mt-5">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sint tempora illum fugiat aut harum fugit eum, ratione amet at, dolor dolorum debitis.
 									</p>
 								</div>
-								<div class="col mt-5">
+								<div class="col-12 mt-5">
 									<img src="asset/images/cart1.png">
 									<p class="mt-5">
 										Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis maxime dignissimos quas similique eos cum dolore! Consequuntur assumenda similique repudiandae, qui fuga alias.
@@ -179,7 +179,7 @@
           	Our licence are available for all parts of Nigeria except Borno. Zamfaa and Bayelsa State.
           </p>
           <h5>Become a Debt Collection Manager</h5>
-          <div>
+          <div class="mb-4">
           	<a href="#" class="btn custom-btn__1  inline-block">Sign up</a>
           </div>
         </div>
@@ -261,9 +261,9 @@
 	<footer class="footer pb-5">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-12 d-flex align-items-center">
-					<div class="d-flex justify-content-between w-100 pt-5">
-					  <div class="logo">
+				<div class="col-md-8 col-12 d-flex align-items-center ">
+					<div class="d-flex justify-content-between w-100 pt-5 footer-mobile">
+					  <div class="logo mb-3">
 					    <a class=" logo" href="#">
 					      <img src="asset/images/logo2.png" alt="logo">
 					    </a>
@@ -274,9 +274,9 @@
 					    	<img src="asset/images/tw.png">
 					    </div>
 					  </div>
-					  <div class=" ">
+					  <div class="footer-link  mb-3">
 					    <h5 class="font-weight-bold text-color-2">Company</h5>
-					    <div class="d-flex justify-content-end">
+					    <div class="d-flex">
 					      <ul class="nav nav-pills flex-column mr-5 footer-menu   mt-3">
 					        <li class="nav-item">
 					          <a class="nav-link p-0 " href="index.html">Why procredita</a>
@@ -300,9 +300,9 @@
 					      </ul>
 					    </div>
 					  </div>
-					  <div class=" ">
+					  <div class="footer-link ">
 					    <h5 class="font-weight-bold text-color-2">Legal</h5>
-					    <div class="d-flex justify-content-end">
+					    <div class="d-flex">
 					      <ul class="nav nav-pills flex-column mr-5 footer-menu  mt-3">
 					        <li class="nav-item">
 					          <a class="nav-link p-0 " href="index.html">Cookies Policy</a>
@@ -315,7 +315,7 @@
 					  </div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 col-12 mb-3 d-none d-md-block">
 					<img src="asset/images/map.png" class="img-fluid">
 				</div>
 			</div>
