--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</div>
 	</section>
 
-	<section>
+	<section class="pb-5">
 		<div class="container">
 			<div class="row mt-5">
 				<div class="col-12">
