--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<div class="container">
 			  <nav class="navbar navbar-light  navbar-expand-md px-0 mt-3 mb-5">
 			    <!-- Brand -->
-			    <a class="navbar-brand text-white d-none d-md-block" href="#">
+			    <a class="navbar-brand text-white" href="#">
 			    	<img src="asset/images/logo.png">
 			    </a>
 			    
@@ -122,7 +122,7 @@
 					</div>
 				</div>
 				<div class="col-md-12 col-12 parent__custom-container">
-      		<div class="net-design-2 position-absolute">
+      		<div class="net-design-2 position-absolute ">
 						<img src="asset/images/net.png">
 					</div>
 					<div class="row custom-container" data-aos="zoom-in">
@@ -203,7 +203,7 @@
 		</div>
 	</section>
 
-	<section>
+	<section class="mb-5">
 		<div class="container">
 			<div class="row mt-5">
 				<div class="col-12">
@@ -262,8 +262,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-12 d-flex align-items-center">
-					<div class="d-flex justify-content-between w-100 pt-5">
-					  <div class="logo">
+					<div class="d-flex justify-content-between flex-md-row flex-column flex-sm-column w-100 pt-5">
+					  <div class="logo mb-4">
 					    <a class=" logo" href="#">
 					      <img src="asset/images/logo2.png" alt="logo">
 					    </a>
@@ -274,9 +274,9 @@
 					    	<img src="asset/images/tw.png">
 					    </div>
 					  </div>
-					  <div class=" ">
+					  <div class=" mb-4">
 					    <h5 class="font-weight-bold text-color-2">Company</h5>
-					    <div class="d-flex justify-content-end">
+					    <div class="d-flex">
 					      <ul class="nav nav-pills flex-column mr-5 footer-menu   mt-3">
 					        <li class="nav-item">
 					          <a class="nav-link p-0 " href="index.html">Why procredita</a>
@@ -300,9 +300,9 @@
 					      </ul>
 					    </div>
 					  </div>
-					  <div class=" ">
+					  <div class=" mb-4">
 					    <h5 class="font-weight-bold text-color-2">Legal</h5>
-					    <div class="d-flex justify-content-end">
+					    <div class="d-flex">
 					      <ul class="nav nav-pills flex-column mr-5 footer-menu  mt-3">
 					        <li class="nav-item">
 					          <a class="nav-link p-0 " href="index.html">Cookies Policy</a>
@@ -315,7 +315,7 @@
 					  </div>
 					</div>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 d-none d-md-block">
 					<img src="asset/images/map.png" class="img-fluid">
 				</div>
 			</div>
